# hackthon_final_submission

./: .gitignore  Dockerfile  README.md  __init__.py  action_rendering.py  blog.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  task_bank.py  validate-submission.sh
data/: jira_outlook_robust_case.json  jira_outlook_robust_case_graph.md
data/tasks/robust_episodes/: robust_jira_2090.json  robust_jira_2101.json  robust_jira_2104.json  robust_jira_2110.json  robust_jira_2122.json  robust_jira_2125.json  robust_jira_2130.json  robust_jira_2140.json  robust_jira_2141.json  robust_jira_2145.json  robust_jira_2146.json  robust_jira_2150.json  robust_jira_2151.json  robust_jira_2155.json  robust_jira_2160.json  robust_jira_2161.json  robust_jira_2170.json  robust_jira_2171.json  robust_jira_2172.json  robust_jira_2180.json  robust_jira_2181.json
data/training/: sft_train.jsonl
docs/: grading_research.md
notebooks/: qwen3_4b_sft_grpo_training.ipynb  qwen3_4b_sft_training.ipynb  qwen3_4b_sft_training_colab.ipynb
server/: Dockerfile  __init__.py  app.py  jira_outlook_env_environment.py
tests/: test_bm25_retrieval.py  test_environment.py  test_manifest.py
training/: prepare_sft_data.py  train_ppo.py  train_sft.py
